Fixed scrolling on tablet devices

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,5 +12,6 @@
     flex-direction: column;
     height: auto;
     min-height: auto;
+    overflow-y: scroll;
   }
 }
